2014-08-10  Christoph Pohl  <sec15334@Christophs-MacBook-Pro-2.local>

	*  (interrupt): build bugfix/c00_01-05 clean all compile errors

	* src/util/c00_hashmap.c (_c00_hashmap_get_hash): fix error
	(segmenatation fault)
	(main): fix error pointer to pointer
	(_c00_hashmap_has_key_with_bucket): +pointer to pointer

2014-08-08  Christoph Pohl  <sec15334@Christophs-MacBook-Pro-2.local>

	* src/strategies/strategy_http_path.c (_c00_http_path_fill_conf_htdocs): +htdocs
	(receive_http_path): +read file

	* conf/http_path_master.config: +config

	* Makefile.am (EXTRA_DIST): +http_path master config

	* src/util.c (c00_util_create_config_path): +create config apth

	* src/strategies/strategy_http_path.c (_c00_http_path_fill_masterconfig): +functionality

	* Makefile.am (EXTRA_DIST): +whitelist config

	* src/strategies/strategy_http_path.c
	(_c00_http_path_read_config): +rename c00 +functionality
	(c00_strategy_http_path_init): +read config + rewrite global store

	* src/strategies/strategy_http_path.h (HTTP_PATH_MAX_PATH): +max
	path len 

	* src/strategy.c (init_strategies): +init http_path

2014-08-07  Christoph Pohl  <sec15334@Christophs-MacBook-Pro-2.local>

	* src/strategies/strategy_http_path.c
	(c00_strategy_http_path_init): add init

	*  (interrupt): init
	*(BRANCH) feature/c00_01.04
	-build strategy_helper
