@@ -9,7 +9,6 @@
 #define HTTP_PATH_LINE_LEN 8192
 #define HTTP_PATH_LEN 1024
 #define HTTP_PATH_METHOD_LEN 10
-
 #define HTTP_PATH_MAX_PATH 128
 
 
